--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -55,14 +55,15 @@ Muted grey #6c757d
 }
 
 .flashcard {
-    margin: 30px 0px;
-    height: 150px;
+    margin: 20px;
+    display: grid;
 }
 
 /* Front */
 .frontside {
     right: 0px;
-    width: 250px;
+    width: 60%;
+    max-width: 350px;
     margin: 0px auto;
 }
 
@@ -96,6 +97,8 @@ Muted grey #6c757d
     right: 0px;
     max-width: 600px;
     margin: 0px auto;
+    max-height: 200px;
+    min-height: 150px;
     overflow: auto;
 }
 
